@@ -18,7 +18,7 @@
    You should have received a copy of the GNU General Public License along
    with LuaTeX; if not, see <http://www.gnu.org/licenses/>. */
 
-/* $Id: ptexlib.h 4911 2014-03-20 14:00:02Z luigi $ */
+/* $Id: ptexlib.h 4965 2014-03-28 17:50:08Z luigi $ */
 
 #ifndef PTEXLIB_H
 #  define PTEXLIB_H
@@ -255,7 +255,7 @@ void lua_node_filter(int filterid, int extrainfo, halfword head_node,
                      halfword * tail_node);
 halfword lua_vpack_filter(halfword head_node, scaled size, int pack_type,
                           scaled maxd, int extrainfo, int d);
-void lua_node_filter_s(int filterid, const char *extrainfo);
+void lua_node_filter_s(int filterid, int extrainfo);
 int lua_linebreak_callback(int is_broken, halfword head_node,
                            halfword * new_head);
 
